--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-cli",
+  "name": "@pipihua/ai-cli",
   "version": "0.1.0",
   "description": "一个基于 AI 的命令行工具",
   "main": "./dist/cli.js",
